# scoophub

./: .env.example  .gitignore  .venv  CHANGELOG.md  Dockerfile  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_local.sh  run_server.sh
.gstack/qa-reports/: qa-report-scoophub-2026-06-04.md
.run/: Template uv run.run.xml
app/: config.py  main.py
app/arxiv/: router.py  scheduler.py  wiring.py
app/auth/: router.py  wiring.py
app/core/: auth.py  base_crawler.py  base_module.py  base_router.py  base_rss_crawler.py  base_scheduler.py  (+3 more)
config/: keywords.yaml  settings.yaml
news/: crawler.py  router.py  sources.py
scripts/: deploy.sh  migrate.sh  seed_sources.sql
shared/: base_crawler.py  models.py  scheduler.py
system/: router.py
tests/: conftest.py  test_api_kal_bonus.py  test_api_news.py  test_api_system.py  test_api_weather.py  test_arxiv.py  test_auth.py  test_base_crawler.py  test_classifier.py  test_config_router.py  test_crawl_data.py  test_database.py  test_dedup.py  test_devto_hashnode.py  test_github_trending.py  test_hacker_news.py  test_integration.py  test_kal_bonus.py  test_models.py  test_news_crawler.py  test_notify.py  test_notify_api.py  test_product_hunt.py  test_reddit.py  test_scheduler.py  test_schedules_router.py  test_sources_api.py  test_stock_report.py  test_stock_resample.py  test_stock_sigma.py  test_stock_watchlist_group.py  test_summarizer.py  test_tech_newsletter.py  test_telegram.py  test_weather_crawler.py  test_youtube_trending.py
weather/: crawler.py  router.py  sources.py
(+187 files in other folders)
