[project]
name = "scoophub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "yfinance>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "gtrending>=0.5.0",
    "arxiv>=4.0.0",
    "pycoingecko>=3.2.0",
    "asyncpraw>=7.8.0",
    "google-api-python-client>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
